# CI_Hardware_Abstraction_API

./: .gitignore  README.md  config.json  main.py  package_transfer_and_install.sh  pyproject.toml  tty_usb.py  uart_proxy.py  uart_test.py  ws_client.py
src/uart_proxy/: __main__.py  config.py  main.py  tftp.py  tty_usb.py  uart.py  uart_proxy.py
src/ws_client/: ws_client.py
uart_proxy/: pyvenv.cfg
